[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/particles/frost_particle.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/WinterQueen.gd" type="Script" id=2]
[ext_resource path="res://assets/misc/frost_fairy_patron.png" type="Texture" id=3]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 9.8, 0 )
initial_velocity = 100.0
orbit_velocity = 0.3
orbit_velocity_random = 0.0
tangential_accel = 1.0
scale = 0.6

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PatronFamiliar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ), Vector2( 0, -1.5 ), Vector2( 0, 1.5 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="WinterQueen" type="Particles2D"]
scale = Vector2( 5, 5 )
emitting = false
amount = 55
lifetime = 3.0
process_material = SubResource( 1 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PatronFamiliar" type="Sprite" parent="."]
position = Vector2( 0, 1.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=["Ice"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
disabled = true

[node name="FreezeGaugeArea" type="Area2D" parent="." groups=["IceGauge"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FreezeGaugeArea"]
shape = SubResource( 2 )
disabled = true

[node name="DamageTickTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 8.5
one_shot = true

[connection signal="timeout" from="DamageTickTimer" to="." method="_on_DamageTickTimer_timeout"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
